--- a/templates/goal_setting.html
+++ b/templates/goal_setting.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="card">
-    <div class="card-body">
+    <div class="card-body table-responsive">
         <table class="table table-hover">
             <thead>
                 <tr>
