--- a/templates/progress_tracker.html
+++ b/templates/progress_tracker.html
@@ -20,7 +20,7 @@
     <div class="col-12 mb-4">
         <div class="card">
             <div class="card-header">
-                <h5>Total Weekly Volume (Weight x Reps)</h5>
+                <h5>Total Weekly Weight Lifted</h5>
             </div>
             <div class="card-body">
                 <canvas id="volumeChart"></canvas>
@@ -32,9 +32,9 @@
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center">
                     <h5>Max Weight Progression by Exercise</h5>
-                    <div class="col-md-4">
+                    <div class="col-12 col-md-4 mt-2 mt-md-0">
                         <select id="exerciseSelect" class="form-select">
                             {% for exercise_name in exercise_progression.keys()|sort %}
                             <option value="{{ exercise_name }}">{{ exercise_name }}</option>
@@ -77,7 +77,7 @@
             data: {
                 labels: volumeData.labels,
                 datasets: [{
-                    label: 'Total Weekly Volume (kg)',
+                    label: 'Total Weekly Weight Lifted (kg)',
                     data: volumeData.data,
                     backgroundColor: 'rgba(3, 218, 198, 0.6)',
                     borderColor: 'rgba(3, 218, 198, 1)',
